--- a/project/res/values-nb/strings.xml
+++ b/project/res/values-nb/strings.xml
@@ -102,6 +102,10 @@
     <string name="trip_bucket_book_flight">Bestill flyvning</string>
     <!-- Tablet Trip bucket, Book Hotel button text -->
     <string name="trip_bucket_book_hotel">Bestill hotell</string>
+    <!-- Tablet Trip bucket Flight text - Round Trip. %1$s <destination city> -->
+    <string name="trip_bucket_label_flight_roundtrip">Tur-retur-reise til %1$s</string>
+    <!-- Tablet Trip bucket Flight text - One way Trip. %1$s <destination city> -->
+    <string name="trip_bucket_label_flight_trip">Reise til %1$s</string>
     <!-- Actionbar Tablet Resutls Flights Title e.g. "Flights to Paris"-->
     <string name="actionbar_tablet_results_flights_title_TEMPLATE">Flyvninger til %1$s</string>
     <!-- Actionbar Tablet Results Hotels Title e.g. "Paris Hotels"-->
@@ -584,7 +588,7 @@
     <!-- First half of phrase about local expert ferrari attraction.  Full phrase: "Drive a ferrari" -->
     <string name="attraction_ferrari_first">Kjør en</string>
     <!-- Second half of phrase about local expert ferrari attraction.  Full phrase: "Drive a ferrari" -->
-    <string name="attraction_ferrari_second">bil fra Ferrari</string>
+    <string name="attraction_ferrari_second">Ferrari</string>
     <!-- First half of phrase about local expert family activities attraction.  Full phrase: "Activities for families" -->
     <string name="attraction_family_first">Aktiviteter for</string>
     <!-- Second half of phrase about local expert family activities attraction.  Full phrase: "Activities for families" -->
@@ -1208,6 +1212,12 @@
     <string name="guest_details">Gjestens detaljer</string>
     <!-- Add traveler number template -->
     <string name="add_traveler_number_TEMPLATE">Informasjon om reisende %1$s</string>
+    <!-- Add adult traveler number template -->
+    <string name="add_adult_number_TEMPLATE">Detaljer for voksen %1$s</string>
+    <!-- Add child traveler number template -->
+    <string name="add_child_number_TEMPLATE">Detaljer for barn %1$s</string>
+    <!-- Add infant in lap traveler number template -->
+    <string name="add_infant_in_lap_number_TEMPLATE">Detaljer for spedbarn på fanget %1$s</string>
     <!-- Warning shown to users when they enter their name -->
     <string name="name_must_match_warning">Du kan nektes boarding på flyet dersom navnet på billetten ikke stemmer overens med din offentlig godkjente legitimasjon.</string>
 
@@ -1253,6 +1263,8 @@
     <string name="expiration_date">Utløpsdato</string>
     <!-- Set expiration date button -->
     <string name="btn_set">Still inn</string>
+    <!-- Describes credit card expiration (e.g. "Expires 01/18") -->
+    <string name="Expires_TEMPLATE">Utløper %1$s</string>
 
     <!-- Section edit billing address -->
     <!-- Address line 1 hint -->
@@ -1519,17 +1531,22 @@
     <string name="cvv_code_TEMPLATE">Sikkerhetskode for &lt;b&gt;%s&lt;/b&gt;</string>
     <!-- Name for a generic card.  %s is the last four digits of the card, e.g. "card ending in 1234" -->
     <string name="card_ending_TEMPLATE">kort som slutter med %s</string>
+    <!-- Name for a generic card. $1%s is the name of the card, and $2%s is the last 4 digits; e.g. "VISA ending in 1234" -->
+    <string name="x_card_ending_in_y_digits_TEMPLATE">%1$s som slutter med %2$s</string>
     <!-- Title for screen telling you to complete your booking by entering a CVV # -->
     <string name="title_complete_booking">Fullfør bestilling</string>
     <!-- Security label above signature strip on credit card mockup, on CVV screen -->
     <string name="Authorized_Signature">Autorisert signatur</string>
     <!-- Security label below signature strip on credit card mockup, on CVV screen -->
     <string name="Not_Valid_Unless_Signed">Ikke gyldig med mindre det er signert</string>
+    <!-- Label above cardholder's name on front of credit card on CVV screen -->
+    <string name="Member">Medlem</string>
+    <!-- Default cardholder name on front of credit card on CVV screen -->
+    <string name="Preferred_Customer">Foretrukket kunde</string>
     <!-- Hint on CVV fragment title for where to look for CVV code -->
     <string name="See_back_of_card">Se baksiden av kortet</string>
     <!-- Hint on CVV fragment title for where to look for CVV code -->
-    <string name="See_font_of_card">Se foran på kortet</string>
-
+    <string name="See_front_of_card">Se foran på kortet</string>
 
     <!-- Flight booking sharing -->
     <!-- The first line of the share email (casual introduction) -->
@@ -1598,6 +1615,12 @@
     <!-- This is a special case, not exactly "zero", so it won't fit into the child_age plurals -->
     <string name="child_age_less_than_one">&lt;b&gt;Yngre enn 1 år&lt;/b&gt;</string>
 
+    <!-- For flights, children ages < 2 can have their own seat or sit in an adult's lap -->
+    <string name="child_age_less_than_one_on_lap">&lt;b&gt;Yngre enn 1 år&lt;/b&gt; – på fanget til en voksen</string>
+    <string name="child_age_less_than_one_own_seat">&lt;b&gt;Yngre enn 1 år&lt;/b&gt; – eget sete</string>
+    <string name="child_age_one_on_lap">&lt;b&gt;1&lt;/b&gt; år gammel – på fanget til en voksen</string>
+    <string name="child_age_one_own_seat">&lt;b&gt;1&lt;/b&gt; år gammel – eget sete</string>
+
     <!-- Search suggestions (locations we suggest to the user when they haven't typed in a location) -->
     <!-- Suggestion to search Times Square -->
     <string name="suggestion_times_square">Times Square, New York, NY</string>
@@ -1630,6 +1653,8 @@
     <string name="upgrade">Oppgrader</string>
     <!-- Button label for searching with newly selected parameters -->
     <string name="SEARCH">SØK</string>
+    <!-- Button label for dismissing the flight guest picker -->
+    <string name="DONE">Fullført</string>
     <!-- Button label for searching the visible map area -->
     <string name="map_search_button">Søk i kartet</string>
     <!-- Label for sort hotels in hotel list on tablet -->
@@ -1753,6 +1778,7 @@
     <!-- Map -->
     <!-- Price displayed on map pop-up bubbles (e.g., "From $179").  (HP, SH) -->
     <string name="map_snippet_price_template">Fra %s</string>
+    <string name="From_x_per_night_template">Fra &lt;font color="#3c7cf2"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt; per natt</string>
 
     <!-- Widget -->
     <!-- Default Loading message for widget -->
