--- a/project/res/values-es-rMX/strings.xml
+++ b/project/res/values-es-rMX/strings.xml
@@ -102,6 +102,10 @@
     <string name="trip_bucket_book_flight">Reservar el vuelo</string>
     <!-- Tablet Trip bucket, Book Hotel button text -->
     <string name="trip_bucket_book_hotel">Reservar el hotel</string>
+    <!-- Tablet Trip bucket Flight text - Round Trip. %1$s <destination city> -->
+    <string name="trip_bucket_label_flight_roundtrip">Viaje de ida y vuelta a %1$s</string>
+    <!-- Tablet Trip bucket Flight text - One way Trip. %1$s <destination city> -->
+    <string name="trip_bucket_label_flight_trip">Viaje a %1$s</string>
     <!-- Actionbar Tablet Resutls Flights Title e.g. "Flights to Paris"-->
     <string name="actionbar_tablet_results_flights_title_TEMPLATE">Vuelos a %1$s</string>
     <!-- Actionbar Tablet Results Hotels Title e.g. "Paris Hotels"-->
@@ -1208,6 +1212,12 @@
     <string name="guest_details">Detalles del huésped</string>
     <!-- Add traveler number template -->
     <string name="add_traveler_number_TEMPLATE">Detalles del pasajero %1$s</string>
+    <!-- Add adult traveler number template -->
+    <string name="add_adult_number_TEMPLATE">Detalles del adulto %1$s</string>
+    <!-- Add child traveler number template -->
+    <string name="add_child_number_TEMPLATE">Detalles del niño %1$s</string>
+    <!-- Add infant in lap traveler number template -->
+    <string name="add_infant_in_lap_number_TEMPLATE">Detalles del niño que viaja en el regazo %1$s</string>
     <!-- Warning shown to users when they enter their name -->
     <string name="name_must_match_warning">Es posible que se rechace el abordaje si el nombre del pasajero no corresponde al de la identificación oficial con foto emitida por el gobierno.</string>
 
@@ -1253,6 +1263,8 @@
     <string name="expiration_date">Fecha de vencimiento</string>
     <!-- Set expiration date button -->
     <string name="btn_set">Configurar</string>
+    <!-- Describes credit card expiration (e.g. "Expires 01/18") -->
+    <string name="Expires_TEMPLATE">Fecha de vencimiento %1$s</string>
 
     <!-- Section edit billing address -->
     <!-- Address line 1 hint -->
@@ -1519,17 +1531,22 @@
     <string name="cvv_code_TEMPLATE">El código de seguridad para &lt;b&gt;%s&lt;/b&gt;</string>
     <!-- Name for a generic card.  %s is the last four digits of the card, e.g. "card ending in 1234" -->
     <string name="card_ending_TEMPLATE">la tarjeta con terminación %s</string>
+    <!-- Name for a generic card. $1%s is the name of the card, and $2%s is the last 4 digits; e.g. "VISA ending in 1234" -->
+    <string name="x_card_ending_in_y_digits_TEMPLATE">%1$s con terminación en %2$s</string>
     <!-- Title for screen telling you to complete your booking by entering a CVV # -->
     <string name="title_complete_booking">Completar la reservación</string>
     <!-- Security label above signature strip on credit card mockup, on CVV screen -->
     <string name="Authorized_Signature">Firma autorizada</string>
     <!-- Security label below signature strip on credit card mockup, on CVV screen -->
     <string name="Not_Valid_Unless_Signed">Carece de validez, a menos que tenga una firma</string>
+    <!-- Label above cardholder's name on front of credit card on CVV screen -->
+    <string name="Member">Socio</string>
+    <!-- Default cardholder name on front of credit card on CVV screen -->
+    <string name="Preferred_Customer">Cliente preferido</string>
     <!-- Hint on CVV fragment title for where to look for CVV code -->
     <string name="See_back_of_card">Ver el dorso de la tarjeta</string>
     <!-- Hint on CVV fragment title for where to look for CVV code -->
-    <string name="See_font_of_card">Ver el frente de la tarjeta</string>
-
+    <string name="See_front_of_card">Ver el frente de la tarjeta</string>
 
     <!-- Flight booking sharing -->
     <!-- The first line of the share email (casual introduction) -->
@@ -1598,6 +1615,12 @@
     <!-- This is a special case, not exactly "zero", so it won't fit into the child_age plurals -->
     <string name="child_age_less_than_one">&lt;b&gt;Menos de 1&lt;/b&gt; año</string>
 
+    <!-- For flights, children ages < 2 can have their own seat or sit in an adult's lap -->
+    <string name="child_age_less_than_one_on_lap">&lt;b&gt;Menos de 1&lt;/b&gt; año, en el regazo de un adulto</string>
+    <string name="child_age_less_than_one_own_seat">&lt;b&gt;Menos de 1&lt;/b&gt; año, en su propio asiento</string>
+    <string name="child_age_one_on_lap">&lt;b&gt;1&lt;/b&gt; año, en el regazo de un adulto</string>
+    <string name="child_age_one_own_seat">&lt;b&gt;1&lt;/b&gt; año, en su propio asiento</string>
+
     <!-- Search suggestions (locations we suggest to the user when they haven't typed in a location) -->
     <!-- Suggestion to search Times Square -->
     <string name="suggestion_times_square">Times Square, Nueva York, NY</string>
@@ -1627,9 +1650,11 @@
     <!-- Title of geocoding location disambiguation dialog (when a location may have multiple choices). -->
     <string name="ChooseLocation">¿Querías decir?…</string>
     <!-- Button label for upgrading the app -->
-    <string name="upgrade">Ahora</string>
+    <string name="upgrade">Mejora</string>
     <!-- Button label for searching with newly selected parameters -->
     <string name="SEARCH">BUSCAR</string>
+    <!-- Button label for dismissing the flight guest picker -->
+    <string name="DONE">LISTO</string>
     <!-- Button label for searching the visible map area -->
     <string name="map_search_button">Busca en el mapa</string>
     <!-- Label for sort hotels in hotel list on tablet -->
@@ -1753,6 +1778,7 @@
     <!-- Map -->
     <!-- Price displayed on map pop-up bubbles (e.g., "From $179").  (HP, SH) -->
     <string name="map_snippet_price_template">De %s</string>
+    <string name="From_x_per_night_template">Desde&lt;font color="#3c7cf2"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;/noche</string>
 
     <!-- Widget -->
     <!-- Default Loading message for widget -->
@@ -2157,7 +2183,7 @@
     <!-- Subject line for "tell a friend" feature -->
     <string name="tell_a_friend_subject">Hoteles de Expedia</string>
     <!-- Message body for "tell a friend" feature -->
-    <string name="tell_a_friend_body">Hola, \n\n visita los Hoteles de Expedia para iPhone y para los teléfonos Android. Es GRATIS, y puedes fácilmente buscar y reservar habitaciones en más de 140.000 hoteles en el mundo. Es la mejor forma de reservar hoteles en tu teléfono.\n\nhttps://www.expedia.com/app</string>
+    <string name="tell_a_friend_body">Hola, \n\n visita los Hoteles de Expedia para iPhone y para los teléfonos Android. Es GRATIS, y puedes fácilmente buscar y reservar habitaciones en más de 140.000 hoteles en el mundo. Es la mejor forma de reservar hoteles en tu teléfono.\n\nhttp://www.expedia.com/app</string>
     <!-- Label for link to terms and conditions -->
     <string name="info_label_terms_conditions">Términos y condiciones</string>
     <!-- Label for link to privacy policy -->
