--- a/project/res/values-fr-rCA/strings.xml
+++ b/project/res/values-fr-rCA/strings.xml
@@ -102,6 +102,10 @@
     <string name="trip_bucket_book_flight">Réserver le vol</string>
     <!-- Tablet Trip bucket, Book Hotel button text -->
     <string name="trip_bucket_book_hotel">Réserver l\&apos;hôtel</string>
+    <!-- Tablet Trip bucket Flight text - Round Trip. %1$s <destination city> -->
+    <string name="trip_bucket_label_flight_roundtrip">Voyage aller-retour à %1$s</string>
+    <!-- Tablet Trip bucket Flight text - One way Trip. %1$s <destination city> -->
+    <string name="trip_bucket_label_flight_trip">Voyage à %1$s</string>
     <!-- Actionbar Tablet Resutls Flights Title e.g. "Flights to Paris"-->
     <string name="actionbar_tablet_results_flights_title_TEMPLATE">Vols à destination de %1$s</string>
     <!-- Actionbar Tablet Results Hotels Title e.g. "Paris Hotels"-->
@@ -1208,6 +1212,12 @@
     <string name="guest_details">Détails sur l\&apos;invité</string>
     <!-- Add traveler number template -->
     <string name="add_traveler_number_TEMPLATE">Détails sur le %1$s voyageur</string>
+    <!-- Add adult traveler number template -->
+    <string name="add_adult_number_TEMPLATE">Détails de %1$s adulte</string>
+    <!-- Add child traveler number template -->
+    <string name="add_child_number_TEMPLATE">Détails de %1$s enfant</string>
+    <!-- Add infant in lap traveler number template -->
+    <string name="add_infant_in_lap_number_TEMPLATE">Détails de %1$s bébé sur les genoux</string>
     <!-- Warning shown to users when they enter their name -->
     <string name="name_must_match_warning">L\&apos;embarquement pourrait être refusé si le nom du voyageur ne correspond pas à celui sur la carte d\&apos;identité avec photo émise par le gouvernement.</string>
 
@@ -1253,6 +1263,8 @@
     <string name="expiration_date">Date d\&apos;expiration</string>
     <!-- Set expiration date button -->
     <string name="btn_set">Définir</string>
+    <!-- Describes credit card expiration (e.g. "Expires 01/18") -->
+    <string name="Expires_TEMPLATE">Expire %1$s</string>
 
     <!-- Section edit billing address -->
     <!-- Address line 1 hint -->
@@ -1519,17 +1531,22 @@
     <string name="cvv_code_TEMPLATE">Code CVV pour &lt;b&gt;%s&lt;/b&gt;</string>
     <!-- Name for a generic card.  %s is the last four digits of the card, e.g. "card ending in 1234" -->
     <string name="card_ending_TEMPLATE">se terminant par %s</string>
+    <!-- Name for a generic card. $1%s is the name of the card, and $2%s is the last 4 digits; e.g. "VISA ending in 1234" -->
+    <string name="x_card_ending_in_y_digits_TEMPLATE">%1$s prenant fin %2$s</string>
     <!-- Title for screen telling you to complete your booking by entering a CVV # -->
     <string name="title_complete_booking">Terminer la réservation</string>
     <!-- Security label above signature strip on credit card mockup, on CVV screen -->
     <string name="Authorized_Signature">Signature autorisée</string>
     <!-- Security label below signature strip on credit card mockup, on CVV screen -->
     <string name="Not_Valid_Unless_Signed">Non valide sans signature</string>
+    <!-- Label above cardholder's name on front of credit card on CVV screen -->
+    <string name="Member">Membre</string>
+    <!-- Default cardholder name on front of credit card on CVV screen -->
+    <string name="Preferred_Customer">Client préféré</string>
     <!-- Hint on CVV fragment title for where to look for CVV code -->
     <string name="See_back_of_card">Voir le verso de la carte</string>
     <!-- Hint on CVV fragment title for where to look for CVV code -->
-    <string name="See_font_of_card">Voir le recto de la carte</string>
-
+    <string name="See_front_of_card">Voir le recto de la carte</string>
 
     <!-- Flight booking sharing -->
     <!-- The first line of the share email (casual introduction) -->
@@ -1598,6 +1615,12 @@
     <!-- This is a special case, not exactly "zero", so it won't fit into the child_age plurals -->
     <string name="child_age_less_than_one">&lt;b&gt;Moins de 1&lt;/b&gt; an</string>
 
+    <!-- For flights, children ages < 2 can have their own seat or sit in an adult's lap -->
+    <string name="child_age_less_than_one_on_lap">&lt;b&gt;Moins de 1&lt;/b&gt; - sur les genoux d\&apos;un adulte</string>
+    <string name="child_age_less_than_one_own_seat">&lt;b&gt;Moins de 1&lt;/b&gt; - sur son siège</string>
+    <string name="child_age_one_on_lap">&lt;b&gt;1&lt;/b&gt; an - sur les genoux d\&apos;un adulte</string>
+    <string name="child_age_one_own_seat">&lt;b&gt;1&lt;/b&gt; an - sur son siège</string>
+
     <!-- Search suggestions (locations we suggest to the user when they haven't typed in a location) -->
     <!-- Suggestion to search Times Square -->
     <string name="suggestion_times_square">Times Square, New York, NY</string>
@@ -1627,9 +1650,11 @@
     <!-- Title of geocoding location disambiguation dialog (when a location may have multiple choices). -->
     <string name="ChooseLocation">Vouliez-vous dire…</string>
     <!-- Button label for upgrading the app -->
-    <string name="upgrade">Mettre à niveau</string>
+    <string name="upgrade">Surclassement</string>
     <!-- Button label for searching with newly selected parameters -->
     <string name="SEARCH">RECHERCHER</string>
+    <!-- Button label for dismissing the flight guest picker -->
+    <string name="DONE">TERMINÉ</string>
     <!-- Button label for searching the visible map area -->
     <string name="map_search_button">Rechercher la carte</string>
     <!-- Label for sort hotels in hotel list on tablet -->
@@ -1753,6 +1778,7 @@
     <!-- Map -->
     <!-- Price displayed on map pop-up bubbles (e.g., "From $179").  (HP, SH) -->
     <string name="map_snippet_price_template">À partir de %s</string>
+    <string name="From_x_per_night_template">À partir de &lt;font color="#3c7cf2"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;/nuit</string>
 
     <!-- Widget -->
     <!-- Default Loading message for widget -->
