--- a/project/res/values-sv/strings.xml
+++ b/project/res/values-sv/strings.xml
@@ -102,6 +102,10 @@
     <string name="trip_bucket_book_flight">Boka flyg</string>
     <!-- Tablet Trip bucket, Book Hotel button text -->
     <string name="trip_bucket_book_hotel">Boka hotell</string>
+    <!-- Tablet Trip bucket Flight text - Round Trip. %1$s <destination city> -->
+    <string name="trip_bucket_label_flight_roundtrip">Returresa till %1$s</string>
+    <!-- Tablet Trip bucket Flight text - One way Trip. %1$s <destination city> -->
+    <string name="trip_bucket_label_flight_trip">Resa till %1$s</string>
     <!-- Actionbar Tablet Resutls Flights Title e.g. "Flights to Paris"-->
     <string name="actionbar_tablet_results_flights_title_TEMPLATE">Flyg till %1$s</string>
     <!-- Actionbar Tablet Results Hotels Title e.g. "Paris Hotels"-->
@@ -1207,7 +1211,13 @@
     <!-- Add Guest for hotels -->
     <string name="guest_details">Gästinformation</string>
     <!-- Add traveler number template -->
-    <string name="add_traveler_number_TEMPLATE">Information om resenär %1$s</string>
+    <string name="add_traveler_number_TEMPLATE">Info om resenär %1$s</string>
+    <!-- Add adult traveler number template -->
+    <string name="add_adult_number_TEMPLATE">Info om vuxen resenär %1$s</string>
+    <!-- Add child traveler number template -->
+    <string name="add_child_number_TEMPLATE">Info om barnresenär %1$s</string>
+    <!-- Add infant in lap traveler number template -->
+    <string name="add_infant_in_lap_number_TEMPLATE">Info om spädbarn %1$s i vuxens knä</string>
     <!-- Warning shown to users when they enter their name -->
     <string name="name_must_match_warning">Passagerare kan nekas ombordstigning om namnet i bokningen inte matchar namnet i den statligt utfärdade ID-handlingen</string>
 
@@ -1253,6 +1263,8 @@
     <string name="expiration_date">Utgångsdatum</string>
     <!-- Set expiration date button -->
     <string name="btn_set">OK</string>
+    <!-- Describes credit card expiration (e.g. "Expires 01/18") -->
+    <string name="Expires_TEMPLATE">Förfaller %1$s</string>
 
     <!-- Section edit billing address -->
     <!-- Address line 1 hint -->
@@ -1519,17 +1531,22 @@
     <string name="cvv_code_TEMPLATE">CVV-kod för &lt;b&gt;%s&lt;/b&gt;</string>
     <!-- Name for a generic card.  %s is the last four digits of the card, e.g. "card ending in 1234" -->
     <string name="card_ending_TEMPLATE">kortnummer slutar på %s</string>
+    <!-- Name for a generic card. $1%s is the name of the card, and $2%s is the last 4 digits; e.g. "VISA ending in 1234" -->
+    <string name="x_card_ending_in_y_digits_TEMPLATE">%1$s slutar på %2$s</string>
     <!-- Title for screen telling you to complete your booking by entering a CVV # -->
     <string name="title_complete_booking">Slutför bokning</string>
     <!-- Security label above signature strip on credit card mockup, on CVV screen -->
     <string name="Authorized_Signature">Auktoriserad signatur</string>
     <!-- Security label below signature strip on credit card mockup, on CVV screen -->
     <string name="Not_Valid_Unless_Signed">Ogiltig om den inte signeras</string>
+    <!-- Label above cardholder's name on front of credit card on CVV screen -->
+    <string name="Member">Medlem</string>
+    <!-- Default cardholder name on front of credit card on CVV screen -->
+    <string name="Preferred_Customer">Prioriterad kund</string>
     <!-- Hint on CVV fragment title for where to look for CVV code -->
     <string name="See_back_of_card">Se kortets baksida</string>
     <!-- Hint on CVV fragment title for where to look for CVV code -->
-    <string name="See_font_of_card">Se kortets framsida</string>
-
+    <string name="See_front_of_card">Se kortets framsida</string>
 
     <!-- Flight booking sharing -->
     <!-- The first line of the share email (casual introduction) -->
@@ -1598,6 +1615,12 @@
     <!-- This is a special case, not exactly "zero", so it won't fit into the child_age plurals -->
     <string name="child_age_less_than_one">&lt;b&gt;Yngre än 1 år&lt;/b&gt;</string>
 
+    <!-- For flights, children ages < 2 can have their own seat or sit in an adult's lap -->
+    <string name="child_age_less_than_one_on_lap">&lt;b&gt;Yngre än 1 år&lt;/b&gt; – i vuxens knä</string>
+    <string name="child_age_less_than_one_own_seat">&lt;b&gt;Yngre än 1 år&lt;/b&gt; – eget säte</string>
+    <string name="child_age_one_on_lap">&lt;b&gt;1&lt;/b&gt; år – i vuxens knä</string>
+    <string name="child_age_one_own_seat">&lt;b&gt;1&lt;/b&gt; år – eget säte</string>
+
     <!-- Search suggestions (locations we suggest to the user when they haven't typed in a location) -->
     <!-- Suggestion to search Times Square -->
     <string name="suggestion_times_square">Times Square, New York, NY</string>
@@ -1630,6 +1653,8 @@
     <string name="upgrade">Uppgradera</string>
     <!-- Button label for searching with newly selected parameters -->
     <string name="SEARCH">SÖK</string>
+    <!-- Button label for dismissing the flight guest picker -->
+    <string name="DONE">KLAR</string>
     <!-- Button label for searching the visible map area -->
     <string name="map_search_button">Sök karta</string>
     <!-- Label for sort hotels in hotel list on tablet -->
@@ -1753,6 +1778,7 @@
     <!-- Map -->
     <!-- Price displayed on map pop-up bubbles (e.g., "From $179").  (HP, SH) -->
     <string name="map_snippet_price_template">Från %s</string>
+    <string name="From_x_per_night_template">Från &lt;font color="#3c7cf2"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;/natt</string>
 
     <!-- Widget -->
     <!-- Default Loading message for widget -->
