--- a/project/res/values-th/strings.xml
+++ b/project/res/values-th/strings.xml
@@ -102,6 +102,10 @@
     <string name="trip_bucket_book_flight">จองเที่ยวบิน</string>
     <!-- Tablet Trip bucket, Book Hotel button text -->
     <string name="trip_bucket_book_hotel">จองโรงแรม</string>
+    <!-- Tablet Trip bucket Flight text - Round Trip. %1$s <destination city> -->
+    <string name="trip_bucket_label_flight_roundtrip">เที่ยวบินไป-กลับไปยัง%1$s</string>
+    <!-- Tablet Trip bucket Flight text - One way Trip. %1$s <destination city> -->
+    <string name="trip_bucket_label_flight_trip">การเดินทางไปยัง%1$s</string>
     <!-- Actionbar Tablet Resutls Flights Title e.g. "Flights to Paris"-->
     <string name="actionbar_tablet_results_flights_title_TEMPLATE">เที่ยวบินไปยัง%1$s</string>
     <!-- Actionbar Tablet Results Hotels Title e.g. "Paris Hotels"-->
@@ -1208,6 +1212,12 @@
     <string name="guest_details">รายละเอียดผู้เข้าพัก</string>
     <!-- Add traveler number template -->
     <string name="add_traveler_number_TEMPLATE">รายละเอียดผู้เดินทาง %1$s</string>
+    <!-- Add adult traveler number template -->
+    <string name="add_adult_number_TEMPLATE">รายละเอียดผู้ใหญ่ %1$s</string>
+    <!-- Add child traveler number template -->
+    <string name="add_child_number_TEMPLATE">รายละเอียดเด็ก %1$s</string>
+    <!-- Add infant in lap traveler number template -->
+    <string name="add_infant_in_lap_number_TEMPLATE">รายละเอียดทารกนั่งตัก %1$s</string>
     <!-- Warning shown to users when they enter their name -->
     <string name="name_must_match_warning">สายการบินอาจปฏิเสธการขึ้นเครื่องหากชื่อผู้เดินทางไม่ตรงกับบัตรประจำตัวที่มีรูปถ่ายที่ทางราชการออกให้</string>
 
@@ -1253,6 +1263,8 @@
     <string name="expiration_date">วันหมดอายุ</string>
     <!-- Set expiration date button -->
     <string name="btn_set">เลือก</string>
+    <!-- Describes credit card expiration (e.g. "Expires 01/18") -->
+    <string name="Expires_TEMPLATE">หมดอายุ %1$s</string>
 
     <!-- Section edit billing address -->
     <!-- Address line 1 hint -->
@@ -1519,17 +1531,22 @@
     <string name="cvv_code_TEMPLATE">รหัส CVV สำหรับ &lt;b&gt;%s&lt;/b&gt;</string>
     <!-- Name for a generic card.  %s is the last four digits of the card, e.g. "card ending in 1234" -->
     <string name="card_ending_TEMPLATE">บัตรลงท้ายด้วย %s</string>
+    <!-- Name for a generic card. $1%s is the name of the card, and $2%s is the last 4 digits; e.g. "VISA ending in 1234" -->
+    <string name="x_card_ending_in_y_digits_TEMPLATE">%1$s ลงท้ายด้วย %2$s</string>
     <!-- Title for screen telling you to complete your booking by entering a CVV # -->
     <string name="title_complete_booking">จองให้เสร็จ</string>
     <!-- Security label above signature strip on credit card mockup, on CVV screen -->
     <string name="Authorized_Signature">ลายเซ็นต์ผู้ถือบัตร</string>
     <!-- Security label below signature strip on credit card mockup, on CVV screen -->
     <string name="Not_Valid_Unless_Signed">ใช้ไม่ได้หากไม่มีลายเซ็นต์</string>
+    <!-- Label above cardholder's name on front of credit card on CVV screen -->
+    <string name="Member">สมาชิก</string>
+    <!-- Default cardholder name on front of credit card on CVV screen -->
+    <string name="Preferred_Customer">ลูกค้าประจำ</string>
     <!-- Hint on CVV fragment title for where to look for CVV code -->
     <string name="See_back_of_card">ดูด้านหลังบัตร</string>
     <!-- Hint on CVV fragment title for where to look for CVV code -->
-    <string name="See_font_of_card">ดูด้านหน้าบัตร</string>
-
+    <string name="See_front_of_card">ดูด้านหน้าบัตร</string>
 
     <!-- Flight booking sharing -->
     <!-- The first line of the share email (casual introduction) -->
@@ -1598,6 +1615,12 @@
     <!-- This is a special case, not exactly "zero", so it won't fit into the child_age plurals -->
     <string name="child_age_less_than_one">&lt;b&gt;น้อยกว่า 1 ปี&lt;/b&gt;</string>
 
+    <!-- For flights, children ages < 2 can have their own seat or sit in an adult's lap -->
+    <string name="child_age_less_than_one_on_lap">&lt;b&gt;อายุต่ำกว่า 1 ปี&lt;/b&gt; - นั่งตักผู้ใหญ่</string>
+    <string name="child_age_less_than_one_own_seat">&lt;b&gt;อายุต่ำกว่า 1 ปี&lt;/b&gt; - มีที่นั่ง</string>
+    <string name="child_age_one_on_lap">&lt;b&gt;1&lt;/b&gt; ปี - นั่งตักผู้ใหญ่</string>
+    <string name="child_age_one_own_seat">&lt;b&gt;1&lt;/b&gt; ปี - มีที่นั่ง</string>
+
     <!-- Search suggestions (locations we suggest to the user when they haven't typed in a location) -->
     <!-- Suggestion to search Times Square -->
     <string name="suggestion_times_square">ไทม์แสควร์, นิวยอร์ก, NY</string>
@@ -1630,6 +1653,8 @@
     <string name="upgrade">อัพเกรด</string>
     <!-- Button label for searching with newly selected parameters -->
     <string name="SEARCH">ค้นหา</string>
+    <!-- Button label for dismissing the flight guest picker -->
+    <string name="DONE">เสร็จ</string>
     <!-- Button label for searching the visible map area -->
     <string name="map_search_button">ค้นหาแผนที่</string>
     <!-- Label for sort hotels in hotel list on tablet -->
@@ -1753,6 +1778,7 @@
     <!-- Map -->
     <!-- Price displayed on map pop-up bubbles (e.g., "From $179").  (HP, SH) -->
     <string name="map_snippet_price_template">เริ่มจาก %s</string>
+    <string name="From_x_per_night_template">เริ่มที่ &lt;font color="#3c7cf2"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;/คืน</string>
 
     <!-- Widget -->
     <!-- Default Loading message for widget -->
