--- a/project/res/values-zh/strings.xml
+++ b/project/res/values-zh/strings.xml
@@ -102,6 +102,10 @@
     <string name="trip_bucket_book_flight">预订航班</string>
     <!-- Tablet Trip bucket, Book Hotel button text -->
     <string name="trip_bucket_book_hotel">预订酒店</string>
+    <!-- Tablet Trip bucket Flight text - Round Trip. %1$s <destination city> -->
+    <string name="trip_bucket_label_flight_roundtrip">%1$s往返</string>
+    <!-- Tablet Trip bucket Flight text - One way Trip. %1$s <destination city> -->
+    <string name="trip_bucket_label_flight_trip">%1$s之行</string>
     <!-- Actionbar Tablet Resutls Flights Title e.g. "Flights to Paris"-->
     <string name="actionbar_tablet_results_flights_title_TEMPLATE">飞往%1$s的航班</string>
     <!-- Actionbar Tablet Results Hotels Title e.g. "Paris Hotels"-->
@@ -1208,6 +1212,12 @@
     <string name="guest_details">住客详细信息</string>
     <!-- Add traveler number template -->
     <string name="add_traveler_number_TEMPLATE">旅客 %1$s 详细信息</string>
+    <!-- Add adult traveler number template -->
+    <string name="add_adult_number_TEMPLATE">成人 %1$s 详细信息</string>
+    <!-- Add child traveler number template -->
+    <string name="add_child_number_TEMPLATE">儿童 %1$s 详细信息</string>
+    <!-- Add infant in lap traveler number template -->
+    <string name="add_infant_in_lap_number_TEMPLATE">怀抱婴儿 %1$s 详细信息</string>
     <!-- Warning shown to users when they enter their name -->
     <string name="name_must_match_warning">如果旅客的姓名与政府签发的带照片的身份证不符，则可能被拒绝登机。</string>
 
@@ -1253,6 +1263,8 @@
     <string name="expiration_date">到期日期</string>
     <!-- Set expiration date button -->
     <string name="btn_set">设置</string>
+    <!-- Describes credit card expiration (e.g. "Expires 01/18") -->
+    <string name="Expires_TEMPLATE">到期日期为 %1$s</string>
 
     <!-- Section edit billing address -->
     <!-- Address line 1 hint -->
@@ -1519,17 +1531,22 @@
     <string name="cvv_code_TEMPLATE">&lt;b&gt;%s&lt;/b&gt;的 CVV 码</string>
     <!-- Name for a generic card.  %s is the last four digits of the card, e.g. "card ending in 1234" -->
     <string name="card_ending_TEMPLATE">以 %s 结尾的信用卡</string>
+    <!-- Name for a generic card. $1%s is the name of the card, and $2%s is the last 4 digits; e.g. "VISA ending in 1234" -->
+    <string name="x_card_ending_in_y_digits_TEMPLATE">卡号以 %2$s 结尾的 %1$s</string>
     <!-- Title for screen telling you to complete your booking by entering a CVV # -->
     <string name="title_complete_booking">完成预订</string>
     <!-- Security label above signature strip on credit card mockup, on CVV screen -->
     <string name="Authorized_Signature">授权签名</string>
     <!-- Security label below signature strip on credit card mockup, on CVV screen -->
     <string name="Not_Valid_Unless_Signed">无签名无效</string>
+    <!-- Label above cardholder's name on front of credit card on CVV screen -->
+    <string name="Member">会员</string>
+    <!-- Default cardholder name on front of credit card on CVV screen -->
+    <string name="Preferred_Customer">优先客户</string>
     <!-- Hint on CVV fragment title for where to look for CVV code -->
     <string name="See_back_of_card">请看信用卡背面</string>
     <!-- Hint on CVV fragment title for where to look for CVV code -->
-    <string name="See_font_of_card">请看信用卡正面</string>
-
+    <string name="See_front_of_card">请看信用卡正面</string>
 
     <!-- Flight booking sharing -->
     <!-- The first line of the share email (casual introduction) -->
@@ -1598,6 +1615,12 @@
     <!-- This is a special case, not exactly "zero", so it won't fit into the child_age plurals -->
     <string name="child_age_less_than_one">&lt;b&gt;不到 1 岁&lt;/b&gt;</string>
 
+    <!-- For flights, children ages < 2 can have their own seat or sit in an adult's lap -->
+    <string name="child_age_less_than_one_on_lap">&lt;b&gt;不到 1 岁&lt;/b&gt; – 怀抱</string>
+    <string name="child_age_less_than_one_own_seat">&lt;b&gt;不到 1 岁&lt;/b&gt; – 占座位</string>
+    <string name="child_age_one_on_lap">&lt;b&gt;1&lt;/b&gt; 岁 – 怀抱</string>
+    <string name="child_age_one_own_seat">&lt;b&gt;1&lt;/b&gt; 岁 – 占座位</string>
+
     <!-- Search suggestions (locations we suggest to the user when they haven't typed in a location) -->
     <!-- Suggestion to search Times Square -->
     <string name="suggestion_times_square">纽约时代广场</string>
@@ -1630,6 +1653,8 @@
     <string name="upgrade">升级</string>
     <!-- Button label for searching with newly selected parameters -->
     <string name="SEARCH">搜索</string>
+    <!-- Button label for dismissing the flight guest picker -->
+    <string name="DONE">完成</string>
     <!-- Button label for searching the visible map area -->
     <string name="map_search_button">搜索地图</string>
     <!-- Label for sort hotels in hotel list on tablet -->
@@ -1753,6 +1778,7 @@
     <!-- Map -->
     <!-- Price displayed on map pop-up bubbles (e.g., "From $179").  (HP, SH) -->
     <string name="map_snippet_price_template">起价 %s</string>
+    <string name="From_x_per_night_template">每晚 &lt;font color="#3c7cf2"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt; 起</string>
 
     <!-- Widget -->
     <!-- Default Loading message for widget -->
